  John Sinclair for the suggestion.

  Updates to the Spanish translation from Jose Antonio Zapata.

  New Polish translation from KArol Muszynski.

  New Italian translation from Meo Bogliolo.

  The documentation sources are now hosted on SourceForge CVS, and are
  no longer part of the source distribution. See
  http://sourceforge.net/cvs/?group_id=18598.


Grinder 3.0-beta26
------------------

  The Grinder now requires J2SE 1.4.

  The console now displays agent process status.

  Fix the TCPProxy to cope correctly with 8 bit strings in all
  locales (Bug 1167731). Thanks to Anton Malykh for the report.

  Fix a bug where system properties specified on the command line were
  incorrectly quoted when building the worker process command line.
  Thanks to Dietrich Bollmann for the report.

  Be more strict about matching line endings in the HTTP TCPProxy
  filters. Previously there was a platform specific bug. Thanks to
  Alex Bolgarov for the report.

  Change to the script API: getGrinderID() has been renamed
  getProcessName().

  Correct SSL documentation - The Grinder does not support the
  javax.net.ssl.* system properties.

  Fix to the JMS receiver example from Dietrich Bollmann: use a queue
  to pass state between threads in a thread safe way.

  Make the TCPProxy HTTP engine more resilient to connections being
  dropped. Thanks to Jon Weygandt for the suggestion.


Grinder 3.0-beta25
------------------

  The statistics engine has been enhanced to report the standard
  deviation of the test times. This addresses Feature Request 1029224.
  The change requires some changes to the statistics API - the
  timedTests and timedTestTime long statistics have been replaced with
  a single timedTests long sample statistic; there is currently no way
  for a script to directly set, or query, timedTests.

  Latest updates from Bertand Ave for the new HTTP Plugin TCPProxy
  filter. Addresses RFE 1041267, bug 1164319.
